--- a/isal-rs/Cargo.toml
+++ b/isal-rs/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 isal-sys = { path = "./../isal-sys" }
+
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "igzip"
+path = "benches/igzip.rs"
+harness = false
