--- a/isal-rs/Cargo.toml
+++ b/isal-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "isal-rs"
-version = "0.1.0"
+version = "0.1.0+62519d9"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
