--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: System installs
         run: |
+          apt update
           apt install -y gcc-multilib
 
       - name: Build ISA-L
