--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         # matches supported targets from tags in https://hub.docker.com/r/muslcc/x86_64/tags
-        target: 
-          - {"arch": "aarch64", "abi": "musl"}, 
-          - {"arch": "x86_64", "abi": "musl"},
-          - {"arch": "powerpc64le", "abi": "gnu"}
+        include:
+          - arch: aarch64
+            abi: musl
+          - arch: x86_64
+            abi: musl
+          - arch: powerpc64le
+            abi: gnu
           
     steps:
       - uses: actions/checkout@v2
@@ -31,12 +34,12 @@ jobs:
           sudo apt install -y gcc-multilib
 
       - name: Build ISA-L (aarch64, x86_64)
-        if: ${{ !startsWith(matrix.target.arch, powerpc64le) }} 
+        if: ${{ !startsWith(matrix.arch, powerpc64le) }} 
         run: |
-          docker run --rm -v $(pwd):/code muslcc/x86_64:${{ matrix.target.arch }}-linux-${{ matrix.target.abi }} sh -c "apk add make nasm && cd /code/isal-sys/isa-l && make install host_cpu=${{ matrix.target.arch }} prefix=./../install -f Makefile.unx CFLAGS_${{ matrix.target.arch }}=-fPIC LDFLAGS=-static"
+          docker run --rm -v $(pwd):/code muslcc/x86_64:${{ matrix.arch }}-linux-${{ matrix.abi }} sh -c "apk add make nasm && cd /code/isal-sys/isa-l && make install host_cpu=${{ matrix.arch }} prefix=./../install -f Makefile.unx CFLAGS_${{ matrix.arch }}=-fPIC LDFLAGS=-static"
 
       - name: Build ISA-L (powerpc64le)
-        if: ${{ startsWith(matrix.target.arch, powerpc64le) }} 
+        if: ${{ startsWith(matrix.arch, powerpc64le) }} 
         run: |
           sudo apt install -y gcc-10-powerpc64le-linux-gnu
           cd isal-sys/isa-l
@@ -47,21 +50,21 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ matrix.target.arch }}-unknown-linux-${{ matrix.target.abi }}
+          target: ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
           profile: minimal
           default: true
 
       - name: Rust Build Caching
         uses: Swatinem/rust-cache@v2
         with:
-          key: ${{ matrix.target.arch }}-linux-${{ matrix.target.abi }}
+          key: ${{ matrix.arch }}-linux-${{ matrix.abi }}
 
       - name: Build
-        run: cargo build --target ${{ matrix.target.arch }}-unknown-linux-${{ matrix.target.abi }}
+        run: cargo build --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
 
       # Cross to run the tests
       - name: Install cross
         run: cargo install cross
       
       - name: Test
-        run: cross test --target ${{ matrix.target.arch }}-unknown-linux-${{ matrix.target.abi }}
+        run: cross test --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
