--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: System installs
         run: |
           sudo apt update
-          sudo apt install -y gcc-multilib
+          sudo apt install -y gcc-multilib clang
 
       - name: Build ISA-L (aarch64, x86_64)
         if: ${{ !startsWith(matrix.arch, 'powerpc64le') }} 
