--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,2 @@
 [target.powerpc64le-unknown-linux-gnu]
-pre-build = ["apt update && apt install -y libclang-dev"]  # required by cbindgen
+pre-build = ["apt update && apt install -y libclang-3.9-dev"]  # required by cbindgen
