--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         run: cargo install cross
 
       - name: Build
-        run: cargo build --tests --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
+        run: cross build --tests --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
       
       - name: Test
         run: cross test --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
