--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           rustup target add ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
           cargo install cross
+          cross build --help
 
       - name: Build
         run: cross build --tests --target ${{ matrix.arch }}-unknown-linux-${{ matrix.abi }}
