--- a/isal-sys/Cargo.toml
+++ b/isal-sys/Cargo.toml
@@ -3,12 +3,22 @@ name = "isal-sys"
 version = "0.1.0+62519d9"
 edition = "2021"
 
+[features]
+default = ["static"]
+static = []
+shared = []
+
+regenerate-bindings = ["dep:bindgen"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 
 [build-dependencies]
-bindgen = "^0.60"
-cc = "^1"
+# cc = "^1"
+bindgen = { version = "^0.69", optional = true }
+# pkg-config = { version = "^0.3", optional = true }
+copy_dir = "0.1.3"
+
 
 [package.metadata.cross.target.powerpc64le-unknown-linux-gnu]
 pre-build = ["apt update && apt install -y llvm-dev libclang-dev clang"]  # required by cbindgen
