--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "isal-rs"
 version = "0.1.0+62519d9"
 edition = "2021"
 
+[lib]
+name = "isal"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 isal-sys = { path = "isal-sys" }
