--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,14 @@ edition = "2021"
 [lib]
 name = "isal"
 
+[features]
+default = ["static"]
+static = ["isal-sys/static"]
+shared = ["isal-sys/shared"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys" }
+isal-sys = { path = "isal-sys"}
 
 [dev-dependencies]
 criterion = "0.3"
