--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,27 +11,27 @@ on:
       - prereleased
 
 jobs:
-  test-cross:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - x86_64-unknown-linux-musl
-          - s390x-unknown-linux-gnu
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+  # test-cross:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       target:
+  #         - x86_64-unknown-linux-musl
+  #         - s390x-unknown-linux-gnu
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+  #     - name: Install Rust toolchain
+  #       uses: dtolnay/rust-toolchain@stable
 
-      - name: Install cross
-        run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
+  #     - name: Install cross
+  #       run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
 
-      - name: Test
-        run: cross test --target ${{ matrix.target }} --release
+  #     - name: Test
+  #       run: cross test --target ${{ matrix.target }} --release
 
   test-wasm32-emscripten:
     runs-on: ubuntu-latest
@@ -88,9 +88,9 @@ jobs:
         run: brew install automake autoconf coreutils libtool gcc
 
       - name: Test (shared)
-        run: cargo test --no-default-features --features shared --lib --release
+        run: cargo test --no-default-features --features shared --lib --release -vv
 
       - name: Test (static)
         run: |
           cargo clean  # ensure we're starting fresh, no funny business
-          cargo test --no-default-features --features static --release
+          cargo test --no-default-features --features static --release -vv
