Add missing nasm for cross builds

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install build deps
+        run: sudo apt install nasm
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
