--- a/Cross.toml
+++ b/Cross.toml
@@ -1,10 +1,15 @@
 [target.x86_64-unknown-linux-musl]
 pre-build = [
   "apt update",
-  "apt install -y llvm-dev libclang-dev clang nasm"
+  "apt install -y nasm"
 ]
 [target.s390x-unknown-linux-gnu]
 pre-build = [
   "apt update",
-  "apt install -y llvm-dev libclang-dev clang nasm"
+  "apt install -y nasm"
+]
+[target.aarch64-unknown-linux-musl]
+pre-build = [
+  "apt update",
+  "apt install -y nasm"
 ]
