--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-musl
-          - s390x-unknown-linux-gnu  # TODO: won't compile for s390x
+          - s390x-unknown-linux-gnu
           - aarch64-unknown-linux-musl
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +29,10 @@ jobs:
         run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
 
       - name: Build
-        run: cross build --target ${{ matrix.target }} --release
+        run: cross build --target ${{ matrix.target }} --release -vv
+
+      - name: Test
+        run: cross test --target ${{ matrix.target }} --release -vv
 
   test-wasm32-emscripten:
     runs-on: ubuntu-latest
