--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,15 @@
-[build]
-pre-build = ["apt update && apt install -y llvm-dev libclang-dev clang"]  # required by cbindgen
+[target.x86_64-unknown-linux-musl]
+pre-build = [
+  "apt update",
+  "apt install -y nasm"
+]
+[target.s390x-unknown-linux-gnu]
+pre-build = [
+  "apt update",
+  "apt install -y nasm"
+]
+[target.aarch64-unknown-linux-musl]
+pre-build = [
+  "apt update",
+  "apt install -y nasm"
+]
