--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "isal-rs"
 version = "0.2.0+496255c"
 edition = "2021"
+description = "isa-l Rust bindings"
+license = "MIT"
+readme = "README.md"
 
 [lib]
 name = "isal"
