--- a/isal-sys/Cargo.toml
+++ b/isal-sys/Cargo.toml
@@ -2,6 +2,8 @@
 name = "isal-sys"
 version = "0.2.0+496255c"
 edition = "2021"
+description = "isa-l sys crate"
+license = "MIT"
 
 [features]
 default = ["static"]
