--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ shared = ["isal-sys/shared"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys"}
+isal-sys = { path = "isal-sys", version = "0.2.0+496255c" }
 
 [dev-dependencies]
 criterion = "0.3"
