--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "isal-rs"
-version = "0.2.0+496255c"
+version = "0.3.0+496255c"
 edition = "2021"
+description = "isa-l Rust bindings"
+license = "MIT"
+readme = "README.md"
 
 [lib]
 name = "isal"
@@ -13,7 +16,7 @@ shared = ["isal-sys/shared"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys"}
+isal-sys = { path = "isal-sys", version = "0.3.0+496255c" }
 
 [dev-dependencies]
 criterion = "0.3"
