Support building using system isal via ISAL_INSTALL_PREFIX

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "isal-rs"
-version = "0.3.0+496255c"
+version = "0.3.1+496255c"
 edition = "2021"
 description = "isa-l Rust bindings"
 license = "MIT"
@@ -13,10 +13,11 @@ name = "isal"
 default = ["static"]
 static = ["isal-sys/static"]
 shared = ["isal-sys/shared"]
+use-system-isal = ["isal-sys/use-system-isal"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys", version = "0.3.0+496255c" }
+isal-sys = { path = "isal-sys", version = "0.3.1+496255c" }
 
 [dev-dependencies]
 criterion = "0.3"
