--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ isal-sys = { path = "isal-sys", version = "0.3.1+496255c" }
 [dev-dependencies]
 criterion = "0.3"
 md5 = "0.7.0"
+flate2 = "^1"
 
 [[bench]]
 name = "igzip"
