--- a/isal-sys/Cargo.toml
+++ b/isal-sys/Cargo.toml
@@ -3,7 +3,11 @@ name = "isal-sys"
 version = "0.4.0+496255c"
 edition = "2021"
 description = "isa-l sys crate"
-license = "MIT"
+license = "MIT AND BSD-3-Clause"
+authors = ["Miles Granger <miles59923@gmail.com>"]
+documentation = "https://docs.rs/isal-rs"
+homepage = "https://github.com/milesgranger/isal-rs"
+repository = "https://github.com/milesgranger/isal-rs"
 
 [features]
 default = ["static"]
