--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ authors = ["Miles Granger <miles59923@gmail.com>"]
 documentation = "https://docs.rs/isal-rs"
 homepage = "https://github.com/milesgranger/isal-rs"
 repository = "https://github.com/milesgranger/isal-rs"
-keywords = ["isal", "isa-l", "igzip", "gzip", "deflate", "zlib", "compression", "decompression"]
+keywords = ["isal", "isa-l", "igzip", "deflate", "zlib"]
 
 [lib]
 name = "isal"
