--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ documentation = "https://docs.rs/isal-rs"
 homepage = "https://github.com/milesgranger/isal-rs"
 repository = "https://github.com/milesgranger/isal-rs"
 keywords = ["isal", "isa-l", "igzip", "deflate", "zlib"]
+exclude = ["benches/"]
 
 [lib]
 name = "isal"
