--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ use-system-isal = ["isal-sys/use-system-isal"]
 isal-sys = { path = "isal-sys", version = "0.4.0+496255c" }
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version = "0.5", features = ["html_reports"] }
 md5 = "0.7.0"
 flate2 = "^1"
 rand = "0.8.5"
@@ -35,3 +35,5 @@ rand = "0.8.5"
 name = "igzip"
 path = "benches/igzip.rs"
 harness = false
+html = true
+
