--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Remove benches/
+        run: rm -rf benches/
+
       - name: Install cross
         run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
 
@@ -76,6 +79,10 @@ jobs:
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Remove benches/
+        shell: bash
+        run: rm -rf benches/
 
       - name: Install nasm
         if: runner.os != 'macOS'
