--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ use-system-isal = ["isal-sys/use-system-isal"]
 isal-sys = { path = "isal-sys", version = "0.4.0+496255c" }
 
 [dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
+criterion = { version = "0.5" }
 md5 = "0.7.0"
 flate2 = "^1"
 rand = "0.8.5"
