--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,14 @@ use-system-isal = ["isal-sys/use-system-isal"]
 isal-sys = { path = "isal-sys", version = "0.4.0+496255c" }
 
 [dev-dependencies]
-criterion = { version = "0.5" }
+criterion = { version = "0.5", features = ["html_reports"] }
 md5 = "0.7.0"
 flate2 = "^1"
-rand = "0.8.5"
+rand = "^0.8"
 
 [[bench]]
 name = "igzip"
 path = "benches/igzip.rs"
 harness = false
+html = true
 
