--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,10 +32,10 @@ jobs:
         run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
 
       - name: Build
-        run: cross build --target ${{ matrix.target }} --release -vv
+        run: cross build --target ${{ matrix.target }} -vv
 
       - name: Test
-        run: cross test --target ${{ matrix.target }} --release -vv
+        run: cross test --target ${{ matrix.target }} -vv
 
   test-wasm32-emscripten:
     runs-on: ubuntu-latest
