Fix bug in release builds in read::Encoder

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,10 +32,10 @@ jobs:
         run: cargo install cross --git https://github.com/cross-rs/cross --rev 6d097fb
 
       - name: Build
-        run: cross build --target ${{ matrix.target }} -vv
+        run: cross build --target ${{ matrix.target }} --release -vv
 
       - name: Test
-        run: cross test --target ${{ matrix.target }} -vv
+        run: cross test --target ${{ matrix.target }} --release -vv
 
   test-wasm32-emscripten:
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
         uses: mymindstorm/setup-emsdk@v14
 
       - name: Build
-        run: cargo build --target wasm32-unknown-emscripten --no-default-features --features ${{ matrix.build }}
+        run: cargo build --release --target wasm32-unknown-emscripten --no-default-features --features ${{ matrix.build }}
 
   test-native:
     runs-on: ${{ matrix.os }}
@@ -97,9 +97,9 @@ jobs:
         run: brew install automake autoconf coreutils libtool nasm
 
       - name: Test (shared)
-        run: cargo test --no-default-features --features shared --lib -vv
+        run: cargo test --release --no-default-features --features shared --lib -vv
 
       - name: Test (static)
         run: |
           cargo clean  # ensure we're starting fresh, no funny business
-          cargo test --no-default-features --features static -vv
+          cargo test --release --no-default-features --features static -vv
