--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ use-system-isal = ["isal-sys/use-system-isal"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys", version = "0.5.2+496255c" }
+isal-sys = { path = "isal-sys", version = "0.5.2+496255c", default-features = false }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
