BSD-3-Clause and version bump

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "isal-rs"
-version = "0.5.2+496255c"
+version = "0.5.3+496255c"
 edition = "2021"
 description = "isa-l Rust bindings"
 readme = "README.md"
-license = "MIT AND BSD-3-Clause"
+license = "BSD-3-Clause"
 authors = ["Miles Granger <miles59923@gmail.com>"]
 documentation = "https://docs.rs/isal-rs"
 homepage = "https://github.com/milesgranger/isal-rs"
@@ -29,7 +29,7 @@ use-system-isal = ["isal-sys/use-system-isal"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-isal-sys = { path = "isal-sys", version = "0.5.2+496255c", default-features = false }
+isal-sys = { path = "isal-sys", version = "0.5.3+496255c", default-features = false }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
